[gd_scene load_steps=10 format=2]

[ext_resource path="res://custom-ui/scaler.gd" type="Script" id=2]
[ext_resource path="res://difficulty/difficulty.gd" type="Script" id=3]
[ext_resource path="res://made-by/MadeByScaler.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/sprites/BTN3.png" type="Texture" id=6]
[ext_resource path="res://menus/sprites/BTN2.png" type="Texture" id=9]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.333333, 0.715847 )
colors = PoolColorArray( 0.109804, 0.215686, 0.0156863, 1, 0.377738, 0.399817, 0.0640796, 1, 0.631373, 0.572549, 0.109804, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 512

[sub_resource type="CanvasItemMaterial" id=3]

[node name="Difficulty" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuScaler" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 2 )

[node name="SelectDifficulty" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -171.0
margin_right = 2880.0
margin_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 11 )
text = "Toggle Difficulty:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectDiff" type="Control" parent="MenuScaler"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -554.0
margin_right = 960.0
margin_bottom = 526.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BabyToEasy" type="Label" parent="MenuScaler/SelectDiff"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -16.0
margin_right = 1580.0
margin_bottom = 69.0
rect_scale = Vector2( 0.152021, 0.152021 )
custom_fonts/font = ExtResource( 11 )
text = "(press S or ↓)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyToBaby" type="Label" parent="MenuScaler/SelectDiff"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -16.0
margin_right = 1580.0
margin_bottom = 69.0
rect_scale = Vector2( 0.152021, 0.152021 )
custom_fonts/font = ExtResource( 11 )
text = "(press W or ↑)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyToMedi" type="Label" parent="MenuScaler/SelectDiff"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = 64.0
margin_right = 1580.0
margin_bottom = 149.0
rect_scale = Vector2( 0.152021, 0.152021 )
custom_fonts/font = ExtResource( 11 )
text = "(press S or ↓)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediToEasy" type="Label" parent="MenuScaler/SelectDiff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = 64.0
margin_right = 1580.0
margin_bottom = 149.0
rect_scale = Vector2( 0.152021, 0.152021 )
custom_fonts/font = ExtResource( 11 )
text = "(press W or ↑)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediToHard" type="Label" parent="MenuScaler/SelectDiff"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = 145.0
margin_right = 1580.0
margin_bottom = 230.0
rect_scale = Vector2( 0.152021, 0.152021 )
custom_fonts/font = ExtResource( 11 )
text = "(press S or ↓)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardToMedi" type="Label" parent="MenuScaler/SelectDiff"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = 145.0
margin_right = 1580.0
margin_bottom = 230.0
rect_scale = Vector2( 0.152021, 0.152021 )
custom_fonts/font = ExtResource( 11 )
text = "(press W or ↑)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BabyBtn" type="TextureButton" parent="MenuScaler/SelectDiff"]
margin_left = 825.0
margin_top = 463.0
margin_right = 1864.01
margin_bottom = 688.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.25, 0.25 )
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuScaler/SelectDiff/BabyBtn"]
margin_left = 148.0
margin_top = 85.0
margin_right = 735.0
margin_bottom = 170.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "Baby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MenuScaler/SelectDiff/BabyBtn"]
margin_left = 610.143
margin_top = 81.0
margin_right = 1120.14
margin_bottom = 166.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "(60%)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyBtn" type="TextureButton" parent="MenuScaler/SelectDiff"]
margin_left = 825.0
margin_top = 543.0
margin_right = 1864.01
margin_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.25, 0.25 )
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuScaler/SelectDiff/EasyBtn"]
margin_left = 148.0
margin_top = 85.0
margin_right = 628.0
margin_bottom = 170.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MenuScaler/SelectDiff/EasyBtn"]
margin_left = 610.14
margin_top = 81.0
margin_right = 1120.14
margin_bottom = 166.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "(100%)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MediBtn" type="TextureButton" parent="MenuScaler/SelectDiff"]
modulate = Color( 0.737255, 0.737255, 0.737255, 0.654902 )
material = SubResource( 3 )
margin_left = 825.0
margin_top = 623.0
margin_right = 1864.01
margin_bottom = 848.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuScaler/SelectDiff/MediBtn"]
margin_left = 148.0
margin_top = 85.0
margin_right = 692.0
margin_bottom = 170.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="MenuScaler/SelectDiff/MediBtn"]
margin_left = 613.0
margin_top = 80.9995
margin_right = 1123.0
margin_bottom = 166.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "(125%)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardBtn" type="TextureButton" parent="MenuScaler/SelectDiff"]
margin_left = 825.0
margin_top = 703.0
margin_right = 1864.01
margin_bottom = 928.0
rect_scale = Vector2( 0.25, 0.25 )
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuScaler/SelectDiff/HardBtn"]
margin_left = 148.0
margin_top = 85.0
margin_right = 743.0
margin_bottom = 170.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="MenuScaler/SelectDiff/HardBtn"]
margin_left = 613.0
margin_top = 80.9998
margin_right = 1123.0
margin_bottom = 166.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 11 )
text = "(150%)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" type="TextureButton" parent="MenuScaler"]
margin_left = -184.0
margin_top = 348.0
margin_right = 855.0
margin_bottom = 573.0
rect_scale = Vector2( 0.35, 0.35 )
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuScaler/PlayBtn"]
margin_left = 320.0
margin_top = 62.8572
margin_right = 660.0
margin_bottom = 147.857
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 11 )
text = "PLAY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrPressSpace3" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = 434.0
margin_right = 2243.0
margin_bottom = 519.0
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = ExtResource( 11 )
text = "(press SPACE|ENTER)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrPressSpace4" type="Label" parent="MenuScaler"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -184.0
margin_top = -363.0
margin_right = 2243.0
margin_bottom = -278.0
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = ExtResource( 11 )
text = "(press B)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="TextureButton" parent="MenuScaler"]
margin_left = -184.0
margin_top = -449.0
margin_right = 855.0
margin_bottom = -224.0
rect_scale = Vector2( 0.35, 0.35 )
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MenuScaler/GoBack"]
margin_top = 62.857
margin_right = 799.231
margin_bottom = 147.857
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = ExtResource( 11 )
text = "Go Back"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadeByScaler" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="MenuScaler/SelectDiff/BabyBtn" to="MenuScaler/SelectDiff" method="_on_easy"]
[connection signal="pressed" from="MenuScaler/SelectDiff/BabyBtn" to="MenuScaler/SelectDiff" method="_on_baby"]
[connection signal="pressed" from="MenuScaler/SelectDiff/EasyBtn" to="MenuScaler/SelectDiff" method="_on_easy"]
[connection signal="pressed" from="MenuScaler/SelectDiff/MediBtn" to="MenuScaler/SelectDiff" method="_on_medi"]
[connection signal="pressed" from="MenuScaler/SelectDiff/HardBtn" to="MenuScaler/SelectDiff" method="_on_hard"]
[connection signal="pressed" from="MenuScaler/PlayBtn" to="MenuScaler/SelectDiff" method="_on_play_pressed"]
[connection signal="pressed" from="MenuScaler/GoBack" to="MenuScaler/SelectDiff" method="_on_go_back"]
